@@ -1,0 +1,4 @@
+knowledge_pad_module/ung_knowledge_pad
+knowledge_pad_module/ung_knowledge_pad/**
+portal_gadgets/ung_document_list
+portal_gadgets/ung_document_list/**
