@@ -1,3 +1,6 @@
+2011-08-04 gabriel.oliveira
+* Export knowledge pad and gadget preserving its state
+
 2011-08-01 gabriel.oliveira
 * Fix default_image of gadget ung_document_list
 
